# calculator-based-on-Qt

./: .gitignore  CMakeLists.txt  README.MD
inc/: mainwidget.h
src/: mainwidget.cpp  mainwidget.ui
